Completed separate summary stats portion, added to one DF

--- a/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
-    "\n",
+    "import numpy as np\n",
     "# Study data files\n",
     "mouse_metadata_path = \"data/Mouse_metadata.csv\"\n",
     "study_results_path = \"data/Study_results.csv\"\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "249"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "         20                          2                 2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "920           62.570880                 2  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "[1880 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        "248"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,14 +842,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.43529323225532\n",
+      "48.933453655\n",
+      "ModeResult(mode=array([45.]), count=array([248]))\n",
+      "79.42063964177238\n",
+      "8.911825830982806\n",
+      "0.20553593623998975\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tumor volume</th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Mode</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Standard Deviation</th>\n",
+       "      <th>Standard Error of Mean (SEM)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tumor Volume Stats</td>\n",
+       "      <td>50.435293</td>\n",
+       "      <td>48.933454</td>\n",
+       "      <td>([45.0], [248])</td>\n",
+       "      <td>79.42064</td>\n",
+       "      <td>8.911826</td>\n",
+       "      <td>0.205536</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Tumor volume       Mean     Median             Mode  Variance  \\\n",
+       "0  Tumor Volume Stats  50.435293  48.933454  ([45.0], [248])  79.42064   \n",
+       "\n",
+       "   Standard Deviation  Standard Error of Mean (SEM)  \n",
+       "0            8.911826                      0.205536  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "tumor_volume = clean_combined_df[\"Tumor Volume (mm3)\"]\n",
     "\n",
     "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
-    "\n"
+    "mean_numpy = np.mean(tumor_volume)\n",
+    "median_numpy = np.median(tumor_volume)\n",
+    "mode_scipy = st.mode(tumor_volume)\n",
+    "var_numpy = np.var(tumor_volume,ddof = 0)\n",
+    "sd_numpy = np.std(tumor_volume,ddof = 0)\n",
+    "sem = clean_combined_df[\"Tumor Volume (mm3)\"].sem(axis=0,ddof = 0)\n",
+    "\n",
+    "print(mean_numpy)\n",
+    "print(median_numpy)\n",
+    "print(mode_scipy)\n",
+    "print(var_numpy)\n",
+    "print(sd_numpy)\n",
+    "print(sem)\n",
+    "\n",
+    "summary_df = pd.DataFrame([{\"Tumor volume\":\"Tumor Volume Stats\",\n",
+    "                            \"Mean\": mean_numpy,\n",
+    "                            \"Median\": median_numpy,\n",
+    "                            \"Mode\": mode_scipy,\n",
+    "                            \"Variance\": var_numpy,\n",
+    "                            \"Standard Deviation\": sd_numpy,\n",
+    "                            \"Standard Error of Mean (SEM)\":sem,\n",
+    "                           }])\n",
+    "summary_df"
    ]
   },
   {
