Redid summary stats by DF because some of the instructions weren't in the pandas frame

--- a/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -842,21 +842,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50.43529323225532\n",
-      "48.933453655\n",
-      "ModeResult(mode=array([45.]), count=array([248]))\n",
-      "79.42063964177238\n",
-      "8.911825830982806\n",
-      "0.20553593623998975\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -878,82 +866,232 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Tumor volume</th>\n",
+       "      <th>Regimen</th>\n",
        "      <th>Mean</th>\n",
        "      <th>Median</th>\n",
-       "      <th>Mode</th>\n",
        "      <th>Variance</th>\n",
        "      <th>Standard Deviation</th>\n",
-       "      <th>Standard Error of Mean (SEM)</th>\n",
+       "      <th>SEM</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Tumor Volume Stats</td>\n",
-       "      <td>50.435293</td>\n",
-       "      <td>48.933454</td>\n",
-       "      <td>([45.0], [248])</td>\n",
-       "      <td>79.42064</td>\n",
-       "      <td>8.911826</td>\n",
-       "      <td>0.205536</td>\n",
+       "      <td>Drug Regimen\n",
+       "0     Ramicane\n",
+       "1    Capomulin\n",
+       "2...</td>\n",
+       "      <td>Tumor Volume (mm3)\n",
+       "Drug Regimen ...</td>\n",
+       "      <td>Tumor Volume (mm3)\n",
+       "Drug Regimen ...</td>\n",
+       "      <td>Tumor Volume (mm3)\n",
+       "Drug Regimen ...</td>\n",
+       "      <td>Tumor Volume (mm3)\n",
+       "Drug Regimen ...</td>\n",
+       "      <td>Tumor Volume (mm3)\n",
+       "Drug Regimen ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Tumor volume       Mean     Median             Mode  Variance  \\\n",
-       "0  Tumor Volume Stats  50.435293  48.933454  ([45.0], [248])  79.42064   \n",
+       "                                             Regimen  \\\n",
+       "0    Drug Regimen\n",
+       "0     Ramicane\n",
+       "1    Capomulin\n",
+       "2...   \n",
        "\n",
-       "   Standard Deviation  Standard Error of Mean (SEM)  \n",
-       "0            8.911826                      0.205536  "
+       "                                                Mean  \\\n",
+       "0                Tumor Volume (mm3)\n",
+       "Drug Regimen ...   \n",
+       "\n",
+       "                                              Median  \\\n",
+       "0                Tumor Volume (mm3)\n",
+       "Drug Regimen ...   \n",
+       "\n",
+       "                                            Variance  \\\n",
+       "0                Tumor Volume (mm3)\n",
+       "Drug Regimen ...   \n",
+       "\n",
+       "                                  Standard Deviation  \\\n",
+       "0                Tumor Volume (mm3)\n",
+       "Drug Regimen ...   \n",
+       "\n",
+       "                                                 SEM  \n",
+       "0                Tumor Volume (mm3)\n",
+       "Drug Regimen ...  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "tumor_volume = clean_combined_df[\"Tumor Volume (mm3)\"]\n",
+    "tumor_list_reg = clean_combined_df['Drug Regimen'].unique()\n",
+    "tumor_list_reg = pd.DataFrame({'Drug Regimen':tumor_list_reg})\n",
     "\n",
-    "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
-    "mean_numpy = np.mean(tumor_volume)\n",
-    "median_numpy = np.median(tumor_volume)\n",
-    "mode_scipy = st.mode(tumor_volume)\n",
-    "var_numpy = np.var(tumor_volume,ddof = 0)\n",
-    "sd_numpy = np.std(tumor_volume,ddof = 0)\n",
-    "sem = clean_combined_df[\"Tumor Volume (mm3)\"].sem(axis=0,ddof = 0)\n",
+    "tumor_mean_reg = clean_combined_df.groupby('Drug Regimen').mean()[\"Tumor Volume (mm3)\"]\n",
+    "tumor_mean_reg = pd.DataFrame(tumor_mean_reg)\n",
     "\n",
-    "print(mean_numpy)\n",
-    "print(median_numpy)\n",
-    "print(mode_scipy)\n",
-    "print(var_numpy)\n",
-    "print(sd_numpy)\n",
-    "print(sem)\n",
+    "tumor_med_reg = clean_combined_df.groupby('Drug Regimen').median()[\"Tumor Volume (mm3)\"]\n",
+    "tumor_med_reg = pd.DataFrame(tumor_med_reg)\n",
     "\n",
-    "summary_df = pd.DataFrame([{\"Tumor volume\":\"Tumor Volume Stats\",\n",
-    "                            \"Mean\": mean_numpy,\n",
-    "                            \"Median\": median_numpy,\n",
-    "                            \"Mode\": mode_scipy,\n",
-    "                            \"Variance\": var_numpy,\n",
-    "                            \"Standard Deviation\": sd_numpy,\n",
-    "                            \"Standard Error of Mean (SEM)\":sem,\n",
-    "                           }])\n",
+    "tumor_var_reg = clean_combined_df.groupby('Drug Regimen').var()[\"Tumor Volume (mm3)\"]\n",
+    "tumor_var_reg = pd.DataFrame(tumor_var_reg)\n",
+    "\n",
+    "tumor_std_reg = clean_combined_df.groupby('Drug Regimen').std()[\"Tumor Volume (mm3)\"]\n",
+    "tumor_std_reg = pd.DataFrame(tumor_std_reg)\n",
+    "\n",
+    "tumor_sem_reg = clean_combined_df.groupby('Drug Regimen').sem()[\"Tumor Volume (mm3)\"]\n",
+    "tumor_sem_reg = pd.DataFrame(tumor_sem_reg)\n",
+    "\n",
+    "summary_df = pd.DataFrame([{\"Regimen\": tumor_list_reg,\n",
+    "                            \"Mean\": tumor_mean_reg,\n",
+    "                            \"Median\": tumor_med_reg,\n",
+    "                            \"Variance\": tumor_var_reg,\n",
+    "                            \"Standard Deviation\": tumor_std_reg,\n",
+    "                            \"SEM\": tumor_sem_reg,}])\n",
     "summary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">index</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22.050126</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23.343598</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24.365505</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25.472143</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26.546993</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75.113288</th>\n",
+       "      <td>1571.0</td>\n",
+       "      <td>1571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75.123690</th>\n",
+       "      <td>1179.0</td>\n",
+       "      <td>1179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75.294936</th>\n",
+       "      <td>1354.0</td>\n",
+       "      <td>1354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76.668817</th>\n",
+       "      <td>1152.0</td>\n",
+       "      <td>1152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78.567014</th>\n",
+       "      <td>1277.0</td>\n",
+       "      <td>1277</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1633 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     index       \n",
+       "                      mean median\n",
+       "Tumor Volume (mm3)               \n",
+       "22.050126              9.0      9\n",
+       "23.343598             19.0     19\n",
+       "24.365505              8.0      8\n",
+       "25.472143             18.0     18\n",
+       "26.546993              7.0      7\n",
+       "...                    ...    ...\n",
+       "75.113288           1571.0   1571\n",
+       "75.123690           1179.0   1179\n",
+       "75.294936           1354.0   1354\n",
+       "76.668817           1152.0   1152\n",
+       "78.567014           1277.0   1277\n",
+       "\n",
+       "[1633 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "\n",
-    "# This method produces everything in a single groupby function\n"
+    "tumor_vol_2 = tumor_volume.reset_index()\n",
+    "tumor_group_by = tumor_vol_2.groupby(\"Tumor Volume (mm3)\").agg(['mean','median'])\n",
+    "tumor_group_by\n",
+    "# This method produces everything in a single groupby function"
    ]
   },
   {
@@ -965,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
