--- a/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "249"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "         20                          2                 2  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "920           62.570880                 2  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "[1880 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        "248"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Regimen</th>\n",
        "      <th>Mean</th>\n",
        "      <th>Median</th>\n",
        "      <th>Variance</th>\n",
@@ -877,10 +876,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Drug Regimen\n",
-       "0     Ramicane\n",
-       "1    Capomulin\n",
-       "2...</td>\n",
        "      <td>Tumor Volume (mm3)\n",
        "Drug Regimen ...</td>\n",
        "      <td>Tumor Volume (mm3)\n",
@@ -897,12 +892,6 @@
        "</div>"
       ],
       "text/plain": [
-       "                                             Regimen  \\\n",
-       "0    Drug Regimen\n",
-       "0     Ramicane\n",
-       "1    Capomulin\n",
-       "2...   \n",
-       "\n",
        "                                                Mean  \\\n",
        "0                Tumor Volume (mm3)\n",
        "Drug Regimen ...   \n",
@@ -924,32 +913,26 @@
        "Drug Regimen ...  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "tumor_list_reg = clean_combined_df['Drug Regimen'].unique()\n",
-    "tumor_list_reg = pd.DataFrame({'Drug Regimen':tumor_list_reg})\n",
+    "tumor_list_clean = clean_combined_df[[\"Drug Regimen\",\"Tumor Volume (mm3)\"]]\n",
     "\n",
-    "tumor_mean_reg = clean_combined_df.groupby('Drug Regimen').mean()[\"Tumor Volume (mm3)\"]\n",
-    "tumor_mean_reg = pd.DataFrame(tumor_mean_reg)\n",
+    "tumor_mean_reg = tumor_list_clean.groupby(\"Drug Regimen\").mean()\n",
     "\n",
-    "tumor_med_reg = clean_combined_df.groupby('Drug Regimen').median()[\"Tumor Volume (mm3)\"]\n",
-    "tumor_med_reg = pd.DataFrame(tumor_med_reg)\n",
+    "tumor_med_reg = tumor_list_clean.groupby(\"Drug Regimen\").median()\n",
     "\n",
-    "tumor_var_reg = clean_combined_df.groupby('Drug Regimen').var()[\"Tumor Volume (mm3)\"]\n",
-    "tumor_var_reg = pd.DataFrame(tumor_var_reg)\n",
+    "tumor_var_reg = tumor_list_clean.groupby('Drug Regimen').var()\n",
     "\n",
-    "tumor_std_reg = clean_combined_df.groupby('Drug Regimen').std()[\"Tumor Volume (mm3)\"]\n",
-    "tumor_std_reg = pd.DataFrame(tumor_std_reg)\n",
+    "tumor_std_reg = tumor_list_clean.groupby('Drug Regimen').std()\n",
     "\n",
-    "tumor_sem_reg = clean_combined_df.groupby('Drug Regimen').sem()[\"Tumor Volume (mm3)\"]\n",
-    "tumor_sem_reg = pd.DataFrame(tumor_sem_reg)\n",
+    "tumor_sem_reg = tumor_list_clean.groupby('Drug Regimen').sem()\n",
     "\n",
-    "summary_df = pd.DataFrame([{\"Regimen\": tumor_list_reg,\n",
+    "summary_df = pd.DataFrame([{\n",
     "                            \"Mean\": tumor_mean_reg,\n",
     "                            \"Median\": tumor_med_reg,\n",
     "                            \"Variance\": tumor_var_reg,\n",
@@ -960,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -988,108 +971,134 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">index</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Tumor Volume (mm3)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
        "      <th>mean</th>\n",
        "      <th>median</th>\n",
+       "      <th>var</th>\n",
+       "      <th>std</th>\n",
+       "      <th>sem</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>22.050126</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>9</td>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23.343598</th>\n",
-       "      <td>19.0</td>\n",
-       "      <td>19</td>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24.365505</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>8</td>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25.472143</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>18</td>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26.546993</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7</td>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75.113288</th>\n",
-       "      <td>1571.0</td>\n",
-       "      <td>1571</td>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.320930</td>\n",
+       "      <td>50.446266</td>\n",
+       "      <td>43.852013</td>\n",
+       "      <td>6.622085</td>\n",
+       "      <td>0.544332</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75.123690</th>\n",
-       "      <td>1179.0</td>\n",
-       "      <td>1179</td>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75.294936</th>\n",
-       "      <td>1354.0</td>\n",
-       "      <td>1354</td>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76.668817</th>\n",
-       "      <td>1152.0</td>\n",
-       "      <td>1152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78.567014</th>\n",
-       "      <td>1277.0</td>\n",
-       "      <td>1277</td>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1633 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     index       \n",
-       "                      mean median\n",
-       "Tumor Volume (mm3)               \n",
-       "22.050126              9.0      9\n",
-       "23.343598             19.0     19\n",
-       "24.365505              8.0      8\n",
-       "25.472143             18.0     18\n",
-       "26.546993              7.0      7\n",
-       "...                    ...    ...\n",
-       "75.113288           1571.0   1571\n",
-       "75.123690           1179.0   1179\n",
-       "75.294936           1354.0   1354\n",
-       "76.668817           1152.0   1152\n",
-       "78.567014           1277.0   1277\n",
-       "\n",
-       "[1633 rows x 2 columns]"
+       "             Tumor Volume (mm3)                                          \n",
+       "                           mean     median        var       std       sem\n",
+       "Drug Regimen                                                             \n",
+       "Capomulin             40.675741  41.557809  24.947764  4.994774  0.329346\n",
+       "Ceftamin              52.591172  51.776157  39.290177  6.268188  0.469821\n",
+       "Infubinol             52.884795  51.820584  43.128684  6.567243  0.492236\n",
+       "Ketapril              55.235638  53.698743  68.553577  8.279709  0.603860\n",
+       "Naftisol              54.331565  52.509285  66.173479  8.134708  0.596466\n",
+       "Placebo               54.033581  52.288934  61.168083  7.821003  0.581331\n",
+       "Propriva              52.320930  50.446266  43.852013  6.622085  0.544332\n",
+       "Ramicane              40.216745  40.673236  23.486704  4.846308  0.320955\n",
+       "Stelasyn              54.233149  52.431737  59.450562  7.710419  0.573111\n",
+       "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "tumor_vol_2 = tumor_volume.reset_index()\n",
-    "tumor_group_by = tumor_vol_2.groupby(\"Tumor Volume (mm3)\").agg(['mean','median'])\n",
+    "tumor_group_by = tumor_list_clean.groupby(\"Drug Regimen\").agg(['mean','median','var','std','sem'])\n",
     "tumor_group_by\n",
     "# This method produces everything in a single groupby function"
    ]
