I think I did the quartile part, I have no idea

--- a/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -2612,7 +2612,7 @@
        "99           62.754451                 3  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2643,16 +2643,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lower Quartile</th>\n",
+       "      <th>Upper Quartile</th>\n",
+       "      <th>Interquartile Range</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Lower Bound</th>\n",
+       "      <th>Upper Bound</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Treatment</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>32.377357</td>\n",
+       "      <td>40.159220</td>\n",
+       "      <td>7.781863</td>\n",
+       "      <td>38.125164</td>\n",
+       "      <td>20.704562</td>\n",
+       "      <td>51.832015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>31.560470</td>\n",
+       "      <td>40.659006</td>\n",
+       "      <td>9.098537</td>\n",
+       "      <td>36.561652</td>\n",
+       "      <td>17.912664</td>\n",
+       "      <td>54.306811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>54.048608</td>\n",
+       "      <td>65.525743</td>\n",
+       "      <td>11.477135</td>\n",
+       "      <td>60.165180</td>\n",
+       "      <td>36.832905</td>\n",
+       "      <td>82.741446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>48.722078</td>\n",
+       "      <td>64.299830</td>\n",
+       "      <td>15.577752</td>\n",
+       "      <td>59.851956</td>\n",
+       "      <td>25.355450</td>\n",
+       "      <td>87.666458</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['Capomulin', 'Ramicane', 'Infubinol', 'Ceftamin']"
+       "           Lower Quartile  Upper Quartile  Interquartile Range     Median  \\\n",
+       "Treatment                                                                   \n",
+       "Capomulin       32.377357       40.159220             7.781863  38.125164   \n",
+       "Ramicane        31.560470       40.659006             9.098537  36.561652   \n",
+       "Infubinol       54.048608       65.525743            11.477135  60.165180   \n",
+       "Ceftamin        48.722078       64.299830            15.577752  59.851956   \n",
+       "\n",
+       "           Lower Bound  Upper Bound  \n",
+       "Treatment                            \n",
+       "Capomulin    20.704562    51.832015  \n",
+       "Ramicane     17.912664    54.306811  \n",
+       "Infubinol    36.832905    82.741446  \n",
+       "Ceftamin     25.355450    87.666458  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2662,19 +2751,42 @@
     "treatments = [\"Capomulin\", \"Ramicane\", \"Infubinol\",\"Ceftamin\"]\n",
     "\n",
     "# Create empty list to fill with tumor vol data (for plotting)\n",
+    "lower_quartile = []\n",
+    "upper_quartile = []\n",
+    "int_quart_range = []\n",
+    "median_tum = []\n",
+    "poss_low_out = []\n",
+    "poss_high_out = []\n",
     "\n",
-    "\n",
-    "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
-    "\n",
+    "#do for loop, this seems inefficient, but idk, it's a shot in the dark here\n",
+    "for treatment in treatments:\n",
+    "    merge_df_t1 = merge_df[merge_df[\"Drug Regimen\"]==f\"{treatment}\"]\n",
+    "    merge_df_t1_f = merge_df_t1[\"Tumor Volume (mm3)\"]\n",
+    "    quartiles = merge_df_t1_f.quantile([.25,.5,.75])\n",
+    "    lowerq = quartiles[0.25]\n",
+    "    lower_quartile.append(lowerq)\n",
+    "    upperq = quartiles[0.75]\n",
+    "    upper_quartile.append(upperq)\n",
+    "    iqr = upperq-lowerq\n",
+    "    int_quart_range.append(iqr)\n",
+    "    median_tum.append(quartiles[.5])\n",
+    "    lower_bound = lowerq - (1.5*iqr)\n",
+    "    poss_low_out.append(lower_bound)\n",
+    "    upper_bound = upperq + (1.5*iqr)\n",
+    "    poss_high_out.append(upper_bound)\n",
     "    \n",
-    "    # Locate the rows which contain mice on each drug and get the tumor volumes\n",
-    "    \n",
-    "    \n",
-    "    # add subset \n",
-    "    \n",
-    "    \n",
-    "    # Determine outliers using upper and lower bounds\n",
-    "    "
+    "# Create summary table with all the lists I created above\n",
+    "summary_tumor_stats_df = {\"Treatment\":treatments,\n",
+    "                          \"Lower Quartile\":lower_quartile,\n",
+    "                          \"Upper Quartile\":upper_quartile,\n",
+    "                          \"Interquartile Range\":int_quart_range,\n",
+    "                          \"Median\":median_tum,\n",
+    "                          \"Lower Bound\":poss_low_out,\n",
+    "                          \"Upper Bound\":poss_high_out,\n",
+    "}\n",
+    "#convert to DataFrame\n",
+    "final_tumor_stats_df = pd.DataFrame(summary_tumor_stats_df)\n",
+    "final_tumor_stats_df.set_index(\"Treatment\")"
    ]
   },
   {
