Minor cleanup, still couldn't get the summary results to work, just out of time

--- a/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -49600,7 +49600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -49624,6 +49624,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Regimens</th>\n",
        "      <th>Mean</th>\n",
        "      <th>Median</th>\n",
        "      <th>Variance</th>\n",
@@ -49634,6 +49635,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0\n",
+       "0   Ramicane\n",
+       "1  Capomulin\n",
+       "2  Infu...</td>\n",
        "      <td>Tumor Volume (mm3)\n",
        "Drug Regimen ...</td>\n",
        "      <td>Tumor Volume (mm3)\n",
@@ -49650,6 +49655,12 @@
        "</div>"
       ],
       "text/plain": [
+       "                                            Regimens  \\\n",
+       "0             0\n",
+       "0   Ramicane\n",
+       "1  Capomulin\n",
+       "2  Infu...   \n",
+       "\n",
        "                                                Mean  \\\n",
        "0                Tumor Volume (mm3)\n",
        "Drug Regimen ...   \n",
@@ -49671,7 +49682,7 @@
        "Drug Regimen ...  "
       ]
      },
-     "execution_count": 332,
+     "execution_count": 433,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49679,6 +49690,10 @@
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "tumor_list_clean = clean_combined_df[[\"Drug Regimen\",\"Tumor Volume (mm3)\"]]\n",
+    "\n",
+    "tumor_list_regimens = clean_combined_df[\"Drug Regimen\"].unique()\n",
+    "tumor_list_f = pd.DataFrame(tumor_list_regimens)\n",
+    "\n",
     "\n",
     "tumor_mean_reg = tumor_list_clean.groupby(\"Drug Regimen\").mean()\n",
     "\n",
@@ -49690,13 +49705,14 @@
     "\n",
     "tumor_sem_reg = tumor_list_clean.groupby('Drug Regimen').sem()\n",
     "\n",
-    "summary_df = pd.DataFrame([{\n",
+    "summary_df = [{\"Regimens\":tumor_list_f,\n",
     "                            \"Mean\": tumor_mean_reg,\n",
     "                            \"Median\": tumor_med_reg,\n",
     "                            \"Variance\": tumor_var_reg,\n",
     "                            \"Standard Deviation\": tumor_std_reg,\n",
-    "                            \"SEM\": tumor_sem_reg,}])\n",
-    "summary_df"
+    "                            \"SEM\": tumor_sem_reg,}]\n",
+    "summary_dff = pd.DataFrame(summary_df)\n",
+    "summary_dff"
    ]
   },
   {
@@ -51716,7 +51732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -51730,6 +51746,14 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Linear regression formula is y = 0.96x + 21.49\n",
+      "The r-squared is: 0.27636002234559154\n"
+     ]
     }
    ],
    "source": [
@@ -51740,11 +51764,11 @@
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "plt.scatter(x_values,y_values)\n",
     "plt.plot(x_values,regress_values,\"r-\")\n",
-    "plt.annotate(line_eq,(6,10),fontsize=15,color=\"red\")\n",
     "plt.xlabel('Weight (g)')\n",
     "plt.ylabel('Tumor Volume (mm3)')\n",
-    "plt.annotate(line_eq,(0,50),fontsize=15,color=\"red\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "print(f\"The Linear regression formula is {line_eq}\")\n",
+    "print(f\"The r-squared is: {rvalue**2}\")"
    ]
   },
   {
