Added Observations and Comments

--- a/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/05-Matplotlib/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -13,6 +13,24 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OBSERVATIONS\n",
+    "\n",
+    "1. Capomulin and Ramicane appeared to be the most stable of all the regimens, seeing that they had the smallest standard deviations and variances across all regimens. These two regimens also had the most participating mice, which may lean more towards a sample size skew than a performance skew. More participants should be tested in other higher performing regimens to avoid this skewing.\n",
+    "2. Female to Male was kept fairly consistent overall in the experiments. Additional analysis could be done to determine whether a specific gender is more likely to have improved results per Regimen, especially if the risk factors for SCC are relevant for gender.\n",
+    "3. Of the 'Promising Treatments' Infubinol and Ceftamin had much higher tails in the box plot graphs. These wider quartile ranges and upper and lower bound would cause me to increase the amount of testing of those specifically to see if a higher population size would normalize the data a little bit better. Otherwise, those two specifically have harder to pin down expectations.\n",
+    "4. There isn't a \"strong\" correlation between weight and tumor volume for Capomulin treated mice, but it's not totally non-correlated either. What I found interesting is the less the mouse weighed the more spread the results of the tumor size were. Whereas the heavier the mouse, the more concentrated the tumor volumes were as well. I'm not sure if this means anything, but seemed interesting nonetheless\n",
+    "\n",
+    "## OVERALL COMMENTS\n",
+    "\n",
+    "1. I am not a \"Science\" type person, so I had an extra challenge of trying to understand what I was trying to accomplish in this exercise. I also tended not to use some of the existing notes, which could have been to my detriment.\n",
+    "2. I could not get the indivdual summary statistics to print together in one DataFrame and I have no idea why. I tried it probably 15-20 times, with varying code options, but could not get it to run. As it is 11:50ish, I have no option but to turn the homework in as is.\n",
+    "3. This a difficult assignment for me. I also don't really do a lot of statistics in my day-to-day, so I found myself just googling what exactly I was trying to accomplish, so I could guess whether my outputs would pass the \"sniff test\" for a stats graph. I'm not sure if I was successful in that or not. We shall see."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 326,
    "metadata": {},
